--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
   </head>
   <body>
     <h1>Simple Chat Engine</h1>
+    <ul id="message-log"></ul>
+    <div>
+      <input type="text" id="chat-text"/><button id='chat-send'>Send</button>
+    </div>
+    <select id="color">
+      <option value="red">Red</option>
+      <option value="blue">Blue</option>
+    </select>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="simple-chat.js"></script>
